--- a/views/home.ejs
+++ b/views/home.ejs
@@ -41,6 +41,9 @@
                     Din plamani pleaca prin 4 vene pulmonare sange oxigenat in atriculul stang.</p>
             </div>
         </div>
-    </div>
+        <div class="videos">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/OM-AeVyW1kk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/FNsdIuxsrOA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
 </body>
 </html>
