--- a/views/accident.ejs
+++ b/views/accident.ejs
@@ -60,28 +60,41 @@
                     <br>S – Speech (Vorbire) - Cere-i persoanei sa repete o fraza simpla (de exemplu “Cerul este albastru”). Nu poti distinge ce zice sau vorbeste ciudat?
                     <br>T – Time (Timp) – Daca remarci oricare dintre aceste semne, suna IMEDIAT la 112! Pentru ca persoana sa fie transportata cat mai repede la spital, spune-i operatorului ca suspectezi ca aceasta a suferit un accident vascular cerebral si transmite-i ora la care au aparut primele simptome.
                 </p>
-                <h3 id="3">Tipuri</h3>
+                <div class="img-flex">
+                    <img src="/images/acv1.png" id="image">
+                    <div class="flex-writing">
+                        <h3 id="3">Tipuri</h3>
+                        <p>
+                            &nbsp&nbsp&nbsp&nbsp Exista doua cauze principale care pot provoca un AVC: o artera blocata (accident ischemic) sau ruperea unui vas de sanage (accident hemoragic). Exista persoane care pot suferi doar o intrerupere temporara a alimentarii cu sange a creierului – acesta se numeste accident ischemic tranzitor (AIT), care nu determina simptome pe termen lung. Tipul de AVC pe care il ai influenteaza tratamentul si recuperarea.
+                            <br>•	Accidentul ischemic: Majoritatea cazurilor de AVC sunt accidente ischemice. Un accident ischemic se produce cand se blocheaza circulatia sangelui din artera care furnizeaza oxigen catre creier. Cheagurile de sange produc frecvent blocaje care provoaca accidente ischemice.
+                        </p>
+                    </div>
+                </div>
                 <p>
-                    &nbsp&nbsp&nbsp&nbsp Exista doua cauze principale care pot provoca un AVC: o artera blocata (accident ischemic) sau ruperea unui vas de sanage (accident hemoragic). Exista persoane care pot suferi doar o intrerupere temporara a alimentarii cu sange a creierului – acesta se numeste accident ischemic tranzitor (AIT), care nu determina simptome pe termen lung. Tipul de AVC pe care il ai influenteaza tratamentul si recuperarea.
-                    <br><br>•	Accidentul ischemic: Majoritatea cazurilor de AVC sunt accidente ischemice. Un accident ischemic se produce cand se blocheaza circulatia sangelui din artera care furnizeaza oxigen catre creier. Cheagurile de sange produc frecvent blocaje care provoaca accidente ischemice.
-                    <br>•	Acccidentul hemoragic: Acesta se produce cand o artera cerebrala pierde sange sau se rupe, iar sangele pierdut pune presiune mare pe celulele cerebrale, deteriorandu-le. Hipertensiunea arteriala si anevrismele sunt boli care pot provoca accidente hemoragice. Exista 2 tipuri: hemoragie cerebrala (cea mai frecventa – apare cand o artera cerebrala inunda cu sange tesutul inconjurator) si hemoragie subarahnoidiana (este mai putin frecventa – inseamna sangerare in zona situate intre creier si tesutul subtire care il acopera).
+                    •	Acccidentul hemoragic: Acesta se produce cand o artera cerebrala pierde sange sau se rupe, iar sangele pierdut pune presiune mare pe celulele cerebrale, deteriorandu-le. Hipertensiunea arteriala si anevrismele sunt boli care pot provoca accidente hemoragice. Exista 2 tipuri: hemoragie cerebrala (cea mai frecventa – apare cand o artera cerebrala inunda cu sange tesutul inconjurator) si hemoragie subarahnoidiana (este mai putin frecventa – inseamna sangerare in zona situate intre creier si tesutul subtire care il acopera).
                     <br><br>•	Accidentul ischemic tranzitor (AIT sau mini-AVC): Esre diferit de celelalte doua tipuri majore de AVC, deoarece fluxul sanguin la nivel cerebral este blocat pentru o perioada scurta, de obicei, nu mai mult de 5 minute. Este insa important de stiut ca AIT poate reprezenta un semnal de alarma pentru un viitor AVC. La fel ca orice AVC major, impune interventie medicala imediata. Totodata, nu se poate sti daca simptomele sunt ale unui AVC major sau ale AIT. Intocmai ca la accidentul ischemic, trombii pot produce frecvent AIT-uri. Nu in ultimul rans, peste o treime din persoanele care sufera un AIT si nu primesc tratament vor suferi un AVC major in decurs de 1 an.
                 </p>
-                <h3 id="4">Factori de risc</h3>
+                <div class="img-flex">
+                    <div class="flex-writing" style="padding-left: 0%;">
+                        <h3 id="4">Factori de risc</h3>
+                        <p>
+                            &nbsp&nbsp&nbsp&nbsp Exista numerosi factori care pot creste riscul de AVC:
+                            <br><br>•	Obezitatea
+                            <br>•	Sedentarismul
+                            <br>•	Consumul excesiv de alcool
+                            <br>•	Hipertensiune arteriala
+                            <br>•	Fumat sau fumat pasiv
+                            <br>•	Colesterol crescut
+                            <br>•	Diabet
+                            <br>•	Boli cardiovasculare
+                            <br>•	Istoric familial de AVC
+                            <br>•	Infectia cu COVID-19
+                        </p>
+                    </div>
+                    <img src="/images/accident-vascular-cerebral 2.jpg" id="image" style="padding-left: 5%;">
+                </div>
                 <p>
-                    &nbsp&nbsp&nbsp&nbsp Exista numerosi factori care pot creste riscul de AVC:
-                    <br><br>Factori legati de stilul de viata
-                    <br><br>•	Obezitatea
-                    <br>•	Sedentarismul
-                    <br>•	Consumul excesiv de alcool
-                    <br>•	Hipertensiune arteriala
-                    <br>•	Fumat sau fumat pasiv
-                    <br>•	Colesterol crescut
-                    <br>•	Diabet
-                    <br>•	Boli cardiovasculare
-                    <br>•	Istoric familial de AVC
-                    <br>•	Infectia cu COVID-19
-                    <br>•	Varsta – Persoanele peste 55 de ani au un risc mai crescut decat tinerii
+                    •	Varsta – Persoanele peste 55 de ani au un risc mai crescut decat tinerii
                     <br>•	Genul— Barbatii au un risc mai crescut decat femeile. Femeile varstnice pot suferi AVC si au risc mai mare de deces in comparatie cu barbatii de aceeasi varsta.
                     <br>•	Hormonii — Folosirea pilulelor contraceptive sau a terapiilor hormonale cu estrogen cresc riscul de AVC.
                 </p>
