--- a/views/hipertensiune.ejs
+++ b/views/hipertensiune.ejs
@@ -37,7 +37,7 @@
                     &nbsp&nbsp&nbsp&nbsp Hipertensiune arteriala (HTA) reprezinta un factor de risc cardiovascular major cu incidenta in continua crestere si se defineste drept cresterea valorilor tensionale >140/90 mmHg.
                 </p>
                 <div class="img-flex">
-                    <img src="/images/hipertensiune.jpg" id="image">
+                    <img src="/images/hipertensiune1.png" id="image">
                     <div class="flex-writing">
                         <h3 id="1">Simptome</h3>
                         <p>
@@ -60,11 +60,16 @@
                     <br>•	alterarea tolerantei la glucoza
                     <br>•	obezitatea abdominala: circumferinta taliei la barbati > 102 cm si la femei >88 cm).
                 </p>
-                <h3 id="3">Diagnostic</h3>
-                <p>
-                    &nbsp&nbsp&nbsp&nbsp Masurarea valorilor tensiunii arteriale impune masuratori repetate ( cel putin 2 masuratori/vizita) pe perioada lungi de timp (cel putin 2-3 vizite la interval de 2-3 saptamani), Atunci cand masurarea tensiunii arteriale este sever crescuta, diagnosticul se poate pune numai pe o masuratoare .
-                    <br>&nbsp&nbsp&nbsp&nbsp Monitorizarea Holter a valorilor TA (monitorizare automata pe 24 h) permite o verificare mai buna a valorilor tensionale in functie de ritmul diurn-nocturn si activitatile pacientului .
-                </p>
+                <div class="img-flex">
+                    <img src="/images/hipertensiune.jpg" id="image">
+                    <div class="flex-writing">
+                        <h3 id="3">Diagnostic</h3>
+                        <p>
+                            &nbsp&nbsp&nbsp&nbsp Masurarea valorilor tensiunii arteriale impune masuratori repetate ( cel putin 2 masuratori/vizita) pe perioada lungi de timp (cel putin 2-3 vizite la interval de 2-3 saptamani), Atunci cand masurarea tensiunii arteriale este sever crescuta, diagnosticul se poate pune numai pe o masuratoare .
+                            <br>&nbsp&nbsp&nbsp&nbsp Monitorizarea Holter a valorilor TA (monitorizare automata pe 24 h) permite o verificare mai buna a valorilor tensionale in functie de ritmul diurn-nocturn si activitatile pacientului .
+                        </p>
+                    </div>
+                </div>
                 <h3 id="4">Tratament</h3>
                 <p>
                     &nbsp&nbsp&nbsp&nbsp Modificarea stilului de viata poate include:
@@ -75,6 +80,7 @@
                     <br>•	Exercitiul fizic in limita tolerantei .Se recomanda 30-45 minute zilnic de tip alergare usoara, mers in pas alert, inot. Este necesara o evaluarea prealabila a pacientului din punct de vedere a tolerantei la efort.
                     <br>•	Reducerea aportului de grasimi si prajeli in alimentatie si recomandarea unei diete bogate in fructe si legume (300g/zi).
                 </p>
+                <img src="/images/hipertensiune2.jpg" id="image" style=" display: block;margin-left: auto;margin-right: auto;width: 60%;">
             </div>
         </div>
     </div>
