--- a/views/infarct.ejs
+++ b/views/infarct.ejs
@@ -38,7 +38,7 @@
                     &nbsp&nbsp&nbsp&nbsp Infarctul miocardic acut mai poarta denumirea de sindrom coronarian acut si reprezinta o urgenta medicala datorata unei ischemii (intrerupere a fluxului sangvin) cardiace, urmata de necroza si pierderea in diferite grade a functie miocardului, care poate duce in anumite situatii la deces.
                 </p>
                 <div class="img-flex">
-                    <img src="/images/infarctul.png" id="image">
+                    <img src="/images/infarct1.jpg" id="image">
                     <div class="flex-writing">
                         <h3 id="1">Cauze</h3>
                         <p>
@@ -76,10 +76,17 @@
                 <p>
                     &nbsp&nbsp&nbsp&nbsp Diagnosticul infarctului miocardic acut se face in regim de urgenta pe baza examenului fizic al pacientului si al unui examen EKG. 
                 </p>
+                <div class="img-flex">
+                    <img src="/images/infarct2.jpg" id="image">
+                    <div class="flex-writing">
+                        <p>
+                            &nbsp&nbsp&nbsp&nbsp Infarctul miocardic la femei:
+                            <br><br>&nbsp&nbsp&nbsp&nbsp Infarctul miocardic este uneori mai greu de diagnosticat la femei decat la barabati, potrivit unui studiu efectuat de SEC. Studiul a aratat ca femeile asteapta, deobicei cu 12 ore mai mult decat barbatii pentru a cauta ajutor medical. Studiul a examinat diferentele dintre barbatii si femeii in ceea ce priveste diagnosticarea infarctului miocardic, care au fost tratati in perioada 2008-2019. Cercetatorii au analizat diagnosticul initial care se bazeaza pe istoricul pacientului, examinarea fizica si o electrocardiograma EKG. Dintr-un total de 41.828 de pacienti admisi cu dureri in piept 42% erau femei, varsta medie a acestora era de 65 de ani, iar cea a barbatiilor de 59. Femeile s-au prezentat dupa o perioada mult mai luna de cat barbatii la spital , acest lucru  a aprut la 41% dintre femei comparat cu 37% pentru barbati. 
+                        </p>
+                    </div>
+                </div>
                 <p>
-                    &nbsp&nbsp&nbsp&nbsp Infarctul miocardic la femei:
-                    <br><br>&nbsp&nbsp&nbsp&nbsp Infarctul miocardic este uneori mai greu de diagnosticat la femei decat la barabati, potrivit unui studiu efectuat de SEC. Studiul a aratat ca femeile asteapta, deobicei cu 12 ore mai mult decat barbatii pentru a cauta ajutor medical. Studiul a examinat diferentele dintre barbatii si femeii in ceea ce priveste diagnosticarea infarctului miocardic, care au fost tratati in perioada 2008-2019. Cercetatorii au analizat diagnosticul initial care se bazeaza pe istoricul pacientului, examinarea fizica si o electrocardiograma EKG. Dintr-un total de 41.828 de pacienti admisi cu dureri in piept 42% erau femei, varsta medie a acestora era de 65 de ani, iar cea a barbatiilor de 59. Femeile s-au prezentat dupa o perioada mult mai luna de cat barbatii la spital , acest lucru  a aprut la 41% dintre femei comparat cu 37% pentru barbati. 
-                    <br>&nbsp&nbsp&nbsp&nbsp La diagnosticul initial, infarctul miocardic a fost considerat a fi cauza principala a durerilor in piept mai mult la barbati decat la femei. Factori de risc precum hipertensiunea sau fumatul cresc posibilitatea unui infarct miocardic, dar s-a observat ca femeilie, desi prezentau totii facorii de risc, sunt in continuare mai putin probabile sa faca atac de cord. 
+                    &nbsp&nbsp&nbsp&nbsp La diagnosticul initial, infarctul miocardic a fost considerat a fi cauza principala a durerilor in piept mai mult la barbati decat la femei. Factori de risc precum hipertensiunea sau fumatul cresc posibilitatea unui infarct miocardic, dar s-a observat ca femeilie, desi prezentau totii facorii de risc, sunt in continuare mai putin probabile sa faca atac de cord. 
                     <br>&nbsp&nbsp&nbsp&nbsp Pentru femei doar 5% din cazuri au fost diagnosticate gresit, in timp ce la barbati doar 3%. Atacul de cord este considerat in mod traditional o afectiune de care sufera in principal barbatii si de aceea acesta a fost mai putin studiat, mai putin diagnosticat si mai putin tratat la femei, care atribuie de obicei simptomele stresului sau anxietatii.
                 </p>
                 <a id="articol" style="color: #ed0000;" href="https://www.escardio.org/The-ESC/Press-Office/Press-releases/Heart-attack-diagnosis-missed-in-women-more-often-than-in-men">Citeste mai mult</a>
