--- a/views/insuficienta.ejs
+++ b/views/insuficienta.ejs
@@ -40,9 +40,9 @@
                     &nbsp&nbsp&nbsp&nbsp Insuficienta cardiaca, apare atunci cand muschiul inimii nu pompeaza sangele asa cum ar trebui. Anumite afectiuni, cum ar fi arterele ingustate ale inimii sau hipertensiunea arteriala, iti lasa treptat inima prea slaba sau rigida pentru a se umple si a pompa eficient sangele.
                 </p>
                 <div class="img-flex">
-                    <img src="/images/insuficienta.jfif" id="image">
+                    <img src="/images/insuficienta 3.jfif" id="image">
                     <div class="flex-writing">
-                        <h3 id="1">Tiprui</h3>
+                        <h3 id="1">Tipuri</h3>
                         <p>
                             Insuficienta cardiaca stanga
                             <br><br>•	Insuficienta cardiaca stanga este cel mai frecvent tip de insuficienta cardiaca.
@@ -56,18 +56,25 @@
                     <br><br>•	Ventriculul cardiac drept este responsabil pentru pomparea sangelui in plamani pentru a colecta oxigen. Insuficienta cardiaca pe partea dreapta apare atunci cand partea dreapta a inimii nu isi poate indeplini sarcina eficient. De obicei este declansata de insuficienta cardiaca stanga. Acumularea de sange in plamani cauzata de insuficienta cardiaca stanga face ca ventriculul drept sa functioneze mai greu. Acest lucru poate stresa partea dreapta a inimii si poate cauza probleme.
                     <br>•	Insuficienta cardiaca dreapta poate aparea, de asemenea, ca urmare a altor afectiuni, cum ar fi bolile pulmonare. Potrivit Clinicii Mayo, insuficienta cardiaca dreapta este marcata de umflarea extremitatilor inferioare. Aceasta umflare este cauzata de rezerva fluida la nivelul picioarelor si abdomenului.
                 </p>
-                <h3 id="2">Cauze</h3>
+                <div class="img-flex">
+                    <div class="flex-writing" style="padding-left: 0%;">
+                        <h3 id="2">Cauze</h3>
+                        <p>
+                            &nbsp&nbsp&nbsp&nbsp • Insuficienta cardiaca se dezvolta adesea dupa ce alte afectiuni au deteriorat sau slabit inima. Cu toate acestea, inima nu trebuie sa fie slabita pentru a provoca insuficienta cardiaca. De asemenea, poate aparea daca inima devine prea rigida.
+                            <br><br>&nbsp&nbsp&nbsp&nbsp • In caz de insuficienta cardiaca, principalele camere de pompare ale inimii (ventriculii) pot deveni rigide si nu se umplu corect intre batai. In unele cazuri de insuficienta cardiaca muschiul inimii poate deveni deteriorat si slabit, iar ventriculii se intind (se dilata) pana la punctul in care inima nu poate pompa sangele in mod eficient prin tot corpul. In timp, inima nu mai poate tine pasul cu cerintele normale care i se impun pentru a pompa sange in restul corpului.
+                        </p>
+                    </div>
+                    <img src="/images/insuficienta.jfif" id="image" style="padding-left: 5%;">
+                </div>
                 <p>
-                    &nbsp&nbsp&nbsp&nbsp Insuficienta cardiaca se dezvolta adesea dupa ce alte afectiuni au deteriorat sau slabit inima. Cu toate acestea, inima nu trebuie sa fie slabita pentru a provoca insuficienta cardiaca. De asemenea, poate aparea daca inima devine prea rigida.
-                    <br><br>&nbsp&nbsp&nbsp&nbsp In caz de insuficienta cardiaca, principalele camere de pompare ale inimii (ventriculii) pot deveni rigide si nu se umplu corect intre batai. In unele cazuri de insuficienta cardiaca muschiul inimii poate deveni deteriorat si slabit, iar ventriculii se intind (se dilata) pana la punctul in care inima nu poate pompa sangele in mod eficient prin tot corpul. In timp, inima nu mai poate tine pasul cu cerintele normale care i se impun pentru a pompa sange in restul corpului.
-                    <br><br>&nbsp&nbsp&nbsp&nbsp Boala arterelor coronare si infarctul. Boala coronariana este cea mai frecventa forma de boala cardiaca si cea mai frecventa cauza de insuficienta cardiaca. Boala rezulta din acumularea de depozite grase in artere, care reduc fluxul de sange si pot duce la atac de cord.
-                    <br><br>&nbsp&nbsp&nbsp&nbsp Hipertensiune arteriala : Daca tensiunea arteriala este ridicata, inima trebuie sa lucreze mai mult decat ar trebui pentru ca sangele sa circule in tot corpul. In timp, acest efort suplimentar  poate face muschiul inimii prea rigid sau prea slab pentru a pompa eficient sangele.
-                    <br><br>&nbsp&nbsp&nbsp&nbsp Valve cardiace defecte. Supapele inimii tale mentin sangele sa curga in directia corecta. O valva deteriorata - datorita unui defect cardiac, a unei boli de inima sau a unei infectii cardiace - va obliga inima sa lucreze mai mult, ceea ce o poate slabi in timp.
-                    <br><br>&nbsp&nbsp&nbsp&nbsp Deteriorarea muschiului inimii Afectarea muschilor cardiaci (cardiomiopatia) poate avea multe cauze, inclusiv mai multe boli, infectii, abuzul de alcool si efectul toxic al drogurilor, cum ar fi cocaina sau unele medicamente utilizate pentru chimioterapie. De asemenea, factorii genetici pot juca un rol in dezvoltarea cardiomiopatiei.
-                    <br><br>&nbsp&nbsp&nbsp&nbsp Miocardita. Miocardita este o inflamatie a muschiului inimii. Este cel mai frecvent cauzata de un virus, inclusiv COVID-19, si poate duce la insuficienta cardiaca stanga.
-                    <br><br>&nbsp&nbsp&nbsp&nbsp Defecte cardiace cu care te-ai nascut (defecte cardiace congenitale). Daca inima si camerele sau supapele sale nu s-au format corect, partile sanatoase ale inimii trebuie sa lucreze mai mult pentru a pompa sange, ceea ce poate duce la insuficienta cardiaca.
-                    <br><br>&nbsp&nbsp&nbsp&nbsp Ritmuri cardiace anormale (aritmii cardiace). Ritmurile cardiace anormale pot face ca inima sa bata prea repede, creand o munca suplimentara pentru inima ta. Un ritm cardiac lent poate duce de asemenea la insuficienta cardiaca.
-                    <br><br>&nbsp&nbsp Alte boli. Bolile cronice - precum diabetul, HIV, hipertiroidismul, hipotiroidismul sau o acumulare de fier (hemocromatoza) sau proteine (amiloidoza) - pot contribui la aparitia insuficientei cardiace.
+                    &nbsp&nbsp&nbsp&nbsp • Boala arterelor coronare si infarctul. Boala coronariana este cea mai frecventa forma de boala cardiaca si cea mai frecventa cauza de insuficienta cardiaca. Boala rezulta din acumularea de depozite grase in artere, care reduc fluxul de sange si pot duce la atac de cord.
+                            <br><br>&nbsp&nbsp&nbsp&nbsp • Hipertensiune arteriala : Daca tensiunea arteriala este ridicata, inima trebuie sa lucreze mai mult decat ar trebui pentru ca sangele sa circule in tot corpul. In timp, acest efort suplimentar  poate face muschiul inimii prea rigid sau prea slab pentru a pompa eficient sangele.
+                            <br><br>&nbsp&nbsp&nbsp&nbsp • Valve cardiace defecte. Supapele inimii tale mentin sangele sa curga in directia corecta. O valva deteriorata - datorita unui defect cardiac, a unei boli de inima sau a unei infectii cardiace - va obliga inima sa lucreze mai mult, ceea ce o poate slabi in timp.
+                            <br><br>&nbsp&nbsp&nbsp&nbsp • Deteriorarea muschiului inimii Afectarea muschilor cardiaci (cardiomiopatia) poate avea multe cauze, inclusiv mai multe boli, infectii, abuzul de alcool si efectul toxic al drogurilor, cum ar fi cocaina sau unele medicamente utilizate pentru chimioterapie. De asemenea, factorii genetici pot juca un rol in dezvoltarea cardiomiopatiei.
+                            <br><br>&nbsp&nbsp&nbsp&nbsp • Miocardita. Miocardita este o inflamatie a muschiului inimii. Este cel mai frecvent cauzata de un virus, inclusiv COVID-19, si poate duce la insuficienta cardiaca stanga.
+                            <br><br>&nbsp&nbsp&nbsp&nbsp • Defecte cardiace cu care te-ai nascut (defecte cardiace congenitale). Daca inima si camerele sau supapele sale nu s-au format corect, partile sanatoase ale inimii trebuie sa lucreze mai mult pentru a pompa sange, ceea ce poate duce la insuficienta cardiaca.
+                            <br><br>&nbsp&nbsp&nbsp&nbsp • Ritmuri cardiace anormale (aritmii cardiace). Ritmurile cardiace anormale pot face ca inima sa bata prea repede, creand o munca suplimentara pentru inima ta. Un ritm cardiac lent poate duce de asemenea la insuficienta cardiaca.
+                            <br><br>&nbsp&nbsp • Alte boli. Bolile cronice - precum diabetul, HIV, hipertiroidismul, hipotiroidismul sau o acumulare de fier (hemocromatoza) sau proteine (amiloidoza) - pot contribui la aparitia insuficientei cardiace.
                 </p>
                 <h3 id="3">Simptome</h3>
                 <p>
@@ -87,26 +94,26 @@
                 </p>
                 <h3 id="4">Diagnostic</h3>
                 <p>
-                    &nbsp&nbsp&nbsp&nbsp Analize de sange. 
-                    <br><br>&nbsp&nbsp&nbsp&nbsp Radiografie toracica. 
-                    <br><br>&nbsp&nbsp&nbsp&nbsp Electrocardiograma (ECG).
-                    <br><br>&nbsp&nbsp&nbsp&nbsp Ecocardiograma. O ecocardiograma foloseste unde sonore pentru a produce o imagine video a inimii tale. 
-                    <br><br>&nbsp&nbsp&nbsp&nbsp Test de stres. Testele de stres masoara sanatatea inimii tale prin modul in care aceasta raspunde la efort. 
-                    <br><br>&nbsp&nbsp&nbsp&nbsp Tomografie computerizata cardiaca (CT). Intr-o scanare CT cardiaca, un tub cu raze X se roteste in jurul corpului si colecteaza imagini ale inimii si ale pieptului.
-                    <br><br>&nbsp&nbsp&nbsp&nbsp Imagistica prin rezonanta magnetica (RMN). Intr-un RMN, undele magnetice sunt produc imagini ale inimii tale.
-                    <br><br>&nbsp&nbsp&nbsp&nbsp Angiograma coronariana. In acest test, un tub subtire si flexibil (cateter) este introdus intr-un vas de sange la nivelul inghinal sau in brat si ghidat prin aorta in arterele coronare. Un colorant injectat prin cateter face ca arterele care va alimenteaza inima sa fie vizibile pe razele X, ajutand medicii sa observe blocajele.
-                    <br><br>&nbsp&nbsp&nbsp&nbsp Biopsie miocardica. In acest test, medicul introduce un cordon de biopsie mic si flexibil intr-o vena din gat sau inghinal si se iau mici bucati din muschiul cardiac. Acest test poate fi efectuat pentru a diagnostica anumite tipuri de boli ale muschilor cardiaci care cauzeaza insuficienta cardiaca.
+                    &nbsp&nbsp&nbsp&nbsp • Analize de sange. 
+                    <br>&nbsp&nbsp&nbsp&nbsp • Radiografie toracica. 
+                    <br>&nbsp&nbsp&nbsp&nbsp • Electrocardiograma (ECG).
+                    <br>&nbsp&nbsp&nbsp&nbsp • Ecocardiograma. O ecocardiograma foloseste unde sonore pentru a produce o imagine video a inimii tale. 
+                    <br>&nbsp&nbsp&nbsp&nbsp • Test de stres. Testele de stres masoara sanatatea inimii tale prin modul in care aceasta raspunde la efort. 
+                    <br>&nbsp&nbsp&nbsp&nbsp • Tomografie computerizata cardiaca (CT). Intr-o scanare CT cardiaca, un tub cu raze X se roteste in jurul corpului si colecteaza imagini ale inimii si ale pieptului.
+                    <br>&nbsp&nbsp&nbsp&nbsp • Imagistica prin rezonanta magnetica (RMN). Intr-un RMN, undele magnetice sunt produc imagini ale inimii tale.
+                    <br>&nbsp&nbsp&nbsp&nbsp • Angiograma coronariana. In acest test, un tub subtire si flexibil (cateter) este introdus intr-un vas de sange la nivelul inghinal sau in brat si ghidat prin aorta in arterele coronare. Un colorant injectat prin cateter face ca arterele care va alimenteaza inima sa fie vizibile pe razele X, ajutand medicii sa observe blocajele.
+                    <br>&nbsp&nbsp&nbsp&nbsp • Biopsie miocardica. In acest test, medicul introduce un cordon de biopsie mic si flexibil intr-o vena din gat sau inghinal si se iau mici bucati din muschiul cardiac. Acest test poate fi efectuat pentru a diagnostica anumite tipuri de boli ale muschilor cardiaci care cauzeaza insuficienta cardiaca.
 
                 </p>
                 <h3 id="5">Tratament</h3>
                 <p>
-                    Medicamente
-                    <br><br>Chirurgie si dispozitive medicale
-                    <br><br>In unele cazuri, medicii recomanda o interventie chirurgicala pentru a trata problema de baza care au dus la insuficienta cardiaca. Unele tratamente studiate si utilizate la anumite persoane includ:
-                    <br><br>Chirurgie de bypass coronarian. 
-                    <br><br>Repararea sau inlocuirea valvei cardiace. 
-                    <br><br>Dispozitive de asistare ventriculara. 
-                    <br><br>Transplant de inima. 
+                    • Medicamente
+                    <br>• Chirurgie si dispozitive medicale
+                    <br>• In unele cazuri, medicii recomanda o interventie chirurgicala pentru a trata problema de baza care au dus la insuficienta cardiaca. Unele tratamente studiate si utilizate la anumite persoane includ:
+                    <br>• Chirurgie de bypass coronarian. 
+                    <br>• Repararea sau inlocuirea valvei cardiace. 
+                    <br>• Dispozitive de asistare ventriculara. 
+                    <br>• Transplant de inima. 
                 </p>
                 <h3 id="6">Complicatii</h3>
                 <p>
@@ -116,6 +123,7 @@
                     <br><br>&nbsp&nbsp&nbsp&nbsp Afectarea ficatului. Insuficienta cardiaca poate duce la acumularea de lichide care exercita o presiune prea mare asupra ficatului. Aceasta rezerva fluida poate duce la cicatrici, ceea ce face mai dificila functionarea corecta a ficatului.
 
                 </p>
+                <img src="/images/insuficienta 2.png" id="image long" style=" display: block;margin-left: auto;margin-right: auto;width: 50%;">
                 <h3 id="7">Prevenire</h3>
                 <p>
                     •	Renuntarea la fumat;
