--- a/views/varice.ejs
+++ b/views/varice.ejs
@@ -40,7 +40,7 @@
                     varicoase - o afectiune generala caracterizata printr-un proces degenerativ al peretelui venos.
                 </p>
                 <div class="img-flex">
-                    <img src="/images/varice.jpg" id="image">
+                    <img src="/images/varice1.jpg" id="image">
                     <div class="flex-writing">
                         <h3 id="1">Tipuri de varice</h3>
                         <p>&nbsp&nbsp&nbsp&nbsp Varicele se clasifica in doua categorii:<br><br>
@@ -50,11 +50,18 @@
                         </p>
                     </div>
                 </div>
-                <h3 id="2">De ce apar varicele?</h3>
-                <p>&nbsp&nbsp&nbsp&nbsp Frecventa bolii varicoase este destul de mare la ambele sexe, dar predomina la femei (60%) fata de barbati (40 %).  De obicei, varicele apar dupa pubertate, frecventa lor creste cu varsta ( 15-30% dupa 25 de ani) si ajung la maximum intre 40-60 de ani, fiind mai frecvente in unele zone geografice (tarile nordice si Europa Centrala).
-                    <br><br>•	Slabirea structurii peretelui venos
-                    <br>•	Absenta valvelor venoase de la nastere
-                    <br>•	Coagularea sangelui in venele (tromboza venoasa)<br><br>
+                <div class="img-flex">
+                    <div class="flex-writing" style="padding-left: 0%;">
+                        <h3 id="2">De ce apar varicele?</h3>
+                        <p>&nbsp&nbsp&nbsp&nbsp Frecventa bolii varicoase este destul de mare la ambele sexe, dar predomina la femei (60%) fata de barbati (40 %).  De obicei, varicele apar dupa pubertate, frecventa lor creste cu varsta (15-30% dupa 25 de ani) si ajung la maximum intre 40-60 de ani, fiind mai frecvente in unele zone geografice (tarile nordice si Europa Centrala).
+                            <br><br>•	Slabirea structurii peretelui venos
+                            <br>•	Absenta valvelor venoase de la nastere
+                            <br>•	Coagularea sangelui in venele (tromboza venoasa)
+                        </p>
+                    </div>
+                    <img src="/images/varice.jpg" id="image" style="padding-left: 5%;">
+                </div>
+                <p>
                     &nbsp&nbsp&nbsp&nbsp Indiferent de cauze, valvele venoase nefunctionale fac ca sangele sa stagneze la nivelul picioarelor, 
                     conducand astfel la cresterea presiunii in venele picioarelor.Aceasta presiune crescuta in venele piciorului este responsabila de marirea venelor, iar, in timp, duce la aparitia complicatiilor bolii varicoase: durere, 
                     umflarea picioarelor, modificarea pielii la nivelul gambei, sangerare, tromboza si aparitia ulcerului varicos.
@@ -77,16 +84,23 @@
                     <br>• Varicele la tineri sunt favorizate de sedentarism si studiul prelungit la masa de scris. Ele apar mai rar la copiii care se joaca mai multe ore pe zi in aer liber, la cei care practica diferite sporturi.
                     <br>• Obezitatea agraveaza evolutia varicelor si creste frecventa complicatiilor.
                 </p>
-                <h3 id="4">Cum se manifesta boala varicoasa?</h3>
+                <div class="img-flex">
+                    <img src="/images/varice2.jpg" id="image">
+                    <div class="flex-writing">
+                        <h3 id="4">Cum se manifesta boala varicoasa?</h3>
+                        <p>
+                            <br><br>&nbsp&nbsp&nbsp&nbsp In marea majoritate a cazurilor sigurul discomfort al varicelor este de ordin estetic, iar tratamentul in acest caz este cosmetic.
+                            <br>&nbsp&nbsp&nbsp&nbsp Frecvent, apar urmatoarele semne si simptome:
+                            <br><br>•	Umflarea gleznei si a gambei
+                            <br>•	Senzatia de greutate, neliniste, oboseala
+                            <br>•	Durere
+                            <br>•	Crampe
+                            <br>•	Mancarimi la nivelul picioarelor
+                        </p>
+                    </div>
+                </div>
                 <p>
-                    <br><br>&nbsp&nbsp&nbsp&nbsp In marea majoritate a cazurilor sigurul discomfort al varicelor este de ordin estetic, iar tratamentul in acest caz este cosmetic.
-                    <br>&nbsp&nbsp&nbsp&nbsp Frecvent, apar urmatoarele semne si simptome:
-                    <br><br>•	Umflarea gleznei si a gambei
-                    <br>•	Senzatia de greutate, neliniste, oboseala
-                    <br>•	Durere
-                    <br>•	Crampe
-                    <br>•	Mancarimi la nivelul picioarelor
-                    <br>&nbsp&nbsp&nbsp&nbsp In cazurile severe, apar ingrosarea si decolorarea pielii picioarelor, eczemele si, in ultima instanta, ulcerul varicos a carui vindecare e dificila si lenta.
+                    &nbsp&nbsp&nbsp&nbsp In cazurile severe, apar ingrosarea si decolorarea pielii picioarelor, eczemele si, in ultima instanta, ulcerul varicos a carui vindecare e dificila si lenta.
                 </p>
                 <h3 id="5">Tratamentul varicelor</h3>
                 <p>
