--- a/views/aritmia.ejs
+++ b/views/aritmia.ejs
@@ -40,7 +40,7 @@
                     &nbsp&nbsp&nbsp&nbsp Aritmia (denumita si disritmie) reprezinta bataile neregulate sau anormal de lente sau rapide ale inimii.
                 </p>
                 <div class="img-flex">
-                    <img src="/images/aritmia.jpg" id="image">
+                    <img src="/images/aritmia 2.png" id="image">
                     <div class="flex-writing">
                         <h3 id="1">Ce este pulsul?</h3>
                         <p>
@@ -48,18 +48,28 @@
                         </p>
                         <h3 id="2">Cum imi masor pulsul?</h3>
                         <p>
-                            &nbsp&nbsp&nbsp&nbsp Simtind pulsul, poti afla cat de repede iti bate inima. Pulsul il poti simti la incheietura mainii sau in zona gatului. Pune doua degete (aratatorul si degetul mijlociu) pe incheietura mainii, chiar sub baza degetului mare. Numara bataile inregistrate in 10 secunde si inmulteste cu 6 pentru a afla pulsul in batai de inima per minut. Un puls normal, la o persoana adulta aflata in repaus, este de aproximativ 60-100 de batai pe minut.
+                            &nbsp&nbsp&nbsp&nbsp Simtind pulsul, poti afla cat de repede iti bate inima. Pulsul il poti simti la incheietura mainii sau in zona gatului. Pune doua degete (aratatorul si degetul mijlociu) pe incheietura mainii, chiar sub baza degetului mare.
                         </p>
                     </div>
                 </div>
-                <h3 id="3">Ritmul cardiac la electrocardiograma (ECG sau EKG)</h3>
                 <p>
-                    &nbsp&nbsp&nbsp&nbsp Inima are un sistem care generează impulsuri electrice. Acest sistem declanseaza bataia de inima. Electrocardiograma este un test care nu doare și nu este invaziv utilizat pentru inregistrarea semnalelor electrice ale inimii. Fiecare bataie de inima este reprezentata pe electrocardiograma (EKG sau ECG) sub forma unor linii pe o hartie gradata. Electrocardograma poate evidenția:
-                    <br><br>•	Ritm cardiac normal (ritmul sinusal normal) arata faptul ca activitatea electrica a inimii urmeaza cursul normal. Ritmul este regulat, nodal (stabilt de nodul sino-atrial) cu o frecventa de aproximativ 60-100 de batai pe minut.
-                    <br>•	Ritm cardiac modificat:
-                    <br><br>&nbsp&nbsp&nbsp&nbsp •	Tahicardie: inima bate mai repede (ritm cardiac de peste 100 de batai pe minut)
-                    <br>&nbsp&nbsp&nbsp&nbsp •	Bradicardie: inima bate mai lent (ritm cardiac sub 60 de batai pe minut)
-                    <br>&nbsp&nbsp&nbsp&nbsp •	Aritmii: inima bate neregulat                    
+                    &nbsp&nbsp&nbsp&nbsp Numara bataile inregistrate in 10 secunde si inmulteste cu 6 pentru a afla pulsul in batai de inima per minut. Un puls normal, la o persoana adulta aflata in repaus, este de aproximativ 60-100 de batai pe minut.
+                </p>
+                <div class="img-flex">
+                    <div class="flex-writing" style="padding-left: 0%;">
+                        <h3 id="3">Ritmul cardiac la electrocardiograma (ECG sau EKG)</h3>
+                        <p>
+                            &nbsp&nbsp&nbsp&nbsp Inima are un sistem care generează impulsuri electrice. Acest sistem declanseaza bataia de inima. Electrocardiograma este un test care nu doare și nu este invaziv utilizat pentru inregistrarea semnalelor electrice ale inimii. Fiecare bataie de inima este reprezentata pe electrocardiograma (EKG sau ECG) sub forma unor linii pe o hartie gradata. Electrocardograma poate evidenția:
+                            <br><br>•	Ritm cardiac normal (ritmul sinusal normal) arata faptul ca activitatea electrica a inimii urmeaza cursul normal. Ritmul este regulat, nodal (stabilt de nodul sino-atrial) cu o frecventa de aproximativ 60-100 de batai pe minut.
+                            <br>•	Ritm cardiac modificat:                    
+                        </p>
+                    </div>
+                    <img src="/images/aritmia 1.jpg" id="image" style="padding-left: 5%;">
+                </div>
+                <p>
+                    •	Tahicardie: inima bate mai repede (ritm cardiac de peste 100 de batai pe minut)
+                    <br>•	Bradicardie: inima bate mai lent (ritm cardiac sub 60 de batai pe minut)
+                    <br>•	Aritmii: inima bate neregulat
                 </p>
                 <h3 id="4">Factori care infuenteaza ritmul cardiac</h3>
                 <p>
@@ -82,17 +92,22 @@
                     <br>•	Transpiratii
                     <br>•	Slabiciune sau oboseala extrema
                 </p>
-                <h3 id="6">Cauze</h3>
-                <p>
-                    •	Boala arteriala coronariana (cunoscuta si sub numele de cardiopatie ischemica (IC))
-                    <br>•	Hipertensiune arteriala
-                    <br>•	Modificari la nivelul muschiului inimii (cardiomiopatie)
-                    <br>•	Disfunctii ale valvelor cardiace
-                    <br>•	Dezechilibru electrolitic la nivel sanguin (al sodiului sau al potasiului)
-                    <br>•	Traumatism in urma unui infarct de miocard
-                    <br>•	Procesul de vindecare dupa o interventie chirurgicala cardiaca
-                    <br>•	Alte probleme medicale
-                </p>
+                <div class="img-flex">
+                    <img src="/images/aritmia.jpg" id="image">
+                    <div class="flex-writing">
+                        <h3 id="6">Cauze</h3>
+                        <p>
+                            •	Boala arteriala coronariana (cunoscuta si sub numele de cardiopatie ischemica (IC))
+                            <br>•	Hipertensiune arteriala
+                            <br>•	Modificari la nivelul muschiului inimii (cardiomiopatie)
+                            <br>•	Disfunctii ale valvelor cardiace
+                            <br>•	Dezechilibru electrolitic la nivel sanguin (al sodiului sau al potasiului)
+                            <br>•	Traumatism in urma unui infarct de miocard
+                            <br>•	Procesul de vindecare dupa o interventie chirurgicala cardiaca
+                            <br>•	Alte probleme medicale
+                        </p>
+                    </div>
+                </div>
                 <h3 id="7">Diagnostic</h3>
                 <p>
                     &nbsp&nbsp&nbsp&nbsp •	Electrocardiograma (EKG sau ECG): Arata imaginea impulsurilor electrice care circula prin muschiul cardiac. EKG-ul este intregistrat pe o hartie gradata, prin folosirea electrozilor (plasturi mici, adezivi) care sunt atasati de piele pe piept, brate si picioare.
