--- a/views/arteroscleroza.ejs
+++ b/views/arteroscleroza.ejs
@@ -25,6 +25,7 @@
     </div>
     <div class="content">
         <h1 id="titlu-boli">Arterioscleroza si ateroscleroza</h1>
+        
         <div id="nav-bar">
             <div class="links">
                 <a href="#1">Simptome</a>
@@ -34,6 +35,7 @@
                 <a href="#5">Prevenire</a>
             </div>
             <div class="writing">
+                <img src="/images/ateroscleroza3.jpg" id="image" style=" display: block;margin-left: auto;margin-right: auto;width: 60%;">
                 <p>
                     &nbsp&nbsp&nbsp&nbsp Arterioscleroza se produce cand vasele de sange (arterele) care transporta oxigenul si substantele nutritive de la inima catre restul corpului se ingroasa si devin rigide – impiedicand uneori circulatia sangelui catre organe si tesuturi. Arterele sanatoase sunt flexibile si elastice, insa, in timp, peretii arterelor se pot intari, o afectiune cunoscuta si ca ingrosarea arterelor.
                     <br>&nbsp&nbsp&nbsp&nbsp Ateroscleroza este un tip specific de arterioscleroza, insa termeniii sunt uneori interschimbabili. Ateroscleroza se refera la acumularea de grasimi, colesterol si alte substante in interiorul si pe peretii arteriali (placa de aterom), care poate impiedica fluxul sanguin. Placa se poate rupe, favorizand aparitia trombilor (cheaguri de sange). Desi ateroscleroza este frecvent considerata o problema cardiaca, aceasta poate afecta arterele oriunde in organism. 
@@ -54,36 +56,48 @@
                     <br>•	Daca ai ateroscleroza la nivelul mainilor sau picioarelor, poti avea simptome ale bolii arteriale periferice, precum durerea de picior la mers 
                     <br>•	Daca ai ateroscleroza la nivelul arterelor care duc catre rinichi, dezvolti hipertensiune arteriala sau insuficienta renala.
                 </p>
-                <h3 id="2">Cauze</h3>
+                <div class="img-flex">
+                    <div class="flex-writing" style="padding-left: 0%;">
+                        <h3 id="2">Cauze</h3>
+                        <p>
+                            &nbsp&nbsp&nbsp&nbsp Ateroscleroza este o boala lenta, progresiva, care poate debuta in copilarie. Desi nu se cunoaste cauza exacta, ateroscleroza poate debuta prin afectarea sau traumatismul la nivelul stratului intern al unei artere.
+                            <br>&nbsp&nbsp&nbsp&nbsp Afectarea poate fi provocata de:
+                            <br><br>•	Hipertensiune arteriala
+                            <br>•	Colesterol crescut
+                            <br>•	Trigliceride mari
+                            <br>•	Fumat
+                            <br>•	Rezistenta la insulina, obezitate sau diabet
+                            <br>•	Inflamatie determinata de boli precum artrita, lupus sau infectie ori inflamatie de cauza necunoscuta
+                        </p>
+                    </div>
+                    <img src="/images/arteroscleroza2.jfif" id="image" style="padding-left: 5%;">
+                </div>
                 <p>
-                    &nbsp&nbsp&nbsp&nbsp Ateroscleroza este o boala lenta, progresiva, care poate debuta in copilarie. Desi nu se cunoaste cauza exacta, ateroscleroza poate debuta prin afectarea sau traumatismul la nivelul stratului intern al unei artere.
-                    <br>&nbsp&nbsp&nbsp&nbsp Afectarea poate fi provocata de:
-                    <br><br>•	Hipertensiune arteriala
-                    <br>•	Colesterol crescut
-                    <br>•	Trigliceride mari
-                    <br>•	Fumat
-                    <br>•	Rezistenta la insulina, obezitate sau diabet
-                    <br>•	Inflamatie determinata de boli precum artrita, lupus sau infectie ori inflamatie de cauza necunoscuta
-                    <br><br> &nbsp&nbsp&nbsp&nbsp Dupa afectarea peretelui intern al arterei, celulele sangelui si alte substante se acumuleaza la locul traumatismului si creeaza peretele intern al arterei.
+                    &nbsp&nbsp&nbsp&nbsp Dupa afectarea peretelui intern al arterei, celulele sangelui si alte substante se acumuleaza la locul traumatismului si creeaza peretele intern al arterei.
                     <br>&nbsp&nbsp&nbsp&nbsp In timp, depozitele grase (placa) de colesterol si alte produse celulare se acumuleaza si ele la locul respectiv si se intaresc,
-                     ingustand arterele. Organele si tesuturile legate de arterele blocate nu mai primesc suficient sange pentru a functiona optim. 
-                     In final, bucatile de depozite grase se pot rupe si intra in fluxul sanguin. De asemenea, membrana subtire a placii se poate 
-                     rupe, raspandind colesterol si alte substante in circulatia sanguina, ceea ce poate provoca formarea unui tromb, care poate 
-                     bloca circulatia sangelui catre o anumita zona din corp, asa cum se intampla cand fluxul sanguin blocat catre inima provoaca 
-                     infarct de miocard. Un tromb poate, de asemenea, sa ajunga in alte parti ale corpului, blocand circulatia catre un alt organ.
+                    ingustand arterele. Organele si tesuturile legate de arterele blocate nu mai primesc suficient sange pentru a functiona optim. 
+                    In final, bucatile de depozite grase se pot rupe si intra in fluxul sanguin. De asemenea, membrana subtire a placii se poate 
+                    rupe, raspandind colesterol si alte substante in circulatia sanguina, ceea ce poate provoca formarea unui tromb, care poate 
+                    bloca circulatia sangelui catre o anumita zona din corp, asa cum se intampla cand fluxul sanguin blocat catre inima provoaca 
+                    infarct de miocard. Un tromb poate, de asemenea, sa ajunga in alte parti ale corpului, blocand circulatia catre un alt organ.
                 </p>
-                <h3 id="3">Factori de risc</h3>
-                <p>
-                    &nbsp&nbsp&nbsp&nbsp Rigidizarea arterelor se produce in timp. Pe langa inaintarea in varsta, factorii care cresc riscul aterosclerozei sunt:
-                    <br><br>•	Hipertensiunea arteriala
-                    <br>•	Colesterolul crescut
-                    <br>•	Diabetul
-                    <br>•	Obezitatea
-                    <br>•	Fumatul
-                    <br>•	Istoricul familial de boala cardiaca precoce
-                    <br>•	Sedentarismul
-                    <br>•	Alimentatia nesanatoasa
-                </p>
+                <div class="img-flex">
+                    <img src="/images/arteroscleroza1.jpg" id="image">
+                    <div class="flex-writing">
+                        <h3 id="3">Factori de risc</h3>
+                        <p>
+                            &nbsp&nbsp&nbsp&nbsp Rigidizarea arterelor se produce in timp. Pe langa inaintarea in varsta, factorii care cresc riscul aterosclerozei sunt:
+                            <br><br>•	Hipertensiunea arteriala
+                            <br>•	Colesterolul crescut
+                            <br>•	Diabetul
+                            <br>•	Obezitatea
+                            <br>•	Fumatul
+                            <br>•	Istoricul familial de boala cardiaca precoce
+                            <br>•	Sedentarismul
+                            <br>•	Alimentatia nesanatoasa
+                        </p>
+                    </div>
+                </div>
                 <h3 id="4">Complicatii</h3>
                 <p>
                     &nbsp&nbsp&nbsp&nbsp Complicatiile aterosclerozei depind de arterele care sunt blocate. De exemplu:
